CRUD de todos os Usuários, as entidades Curso, Ambiente e Turma (incluindo DTO's, Services, Repositories e Controllers) OBS: Ainda não testados porém aparentemente funcionais - 14/05/2025