@@ -1,36 +1,60 @@
 package com.senai.registro_de_acesso_spring.application.services.usuariosServices.alunoServices;
 
+import com.senai.registro_de_acesso_spring.application.dto.usuariosDTOs.alunoDTOs.AlunoDTO;
+import com.senai.registro_de_acesso_spring.domain.entity.usuarios.aluno.Aluno;
+import com.senai.registro_de_acesso_spring.domain.repositories.usuariosRepositories.alunoRepositories.AlunoRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class AlunoService {
-    /*
     @Autowired
-    private AlunoRepository alunoRepo;
+    private AlunoRepository alunoRepository;
 
-    public void cadastrar(AlunoDTO alunoDTO) {
-        Aluno aluno = new Aluno();
-
-        aluno.setNome(alunoDTO.nome());
-        aluno.setTelefone(alunoDTO.telefone());
-        aluno.setEmail(alunoDTO.email());
-        /*
-         nao é necessario a foto do aluno para cadastrar e as ocorerncias serao criada quando necessario apenas
-
-        alunoRepo.save(aluno);
+    public void cadastrarAluno(AlunoDTO dto) {
+        alunoRepository.save(dto.fromDTO()); // nao é necessario a foto do aluno para cadastrar e as ocorerncias serao criada quando necessario apenas
     }
 
     public List<AlunoDTO> listarAlunos() {
-        return alunoRepo.findAll().stream().map(aluno -> new AlunoDTO(
-                aluno.getId(),
-                aluno.getIdDeAcesso(),
-                aluno.getNome(),
-                aluno.getTelefone(),
-                aluno.getEmail(),
-                aluno.getFoto(),
-                aluno.getOcorrencia(),
-                aluno.getJustificativa()
-        )).toList(); // pegar tudo?? | como pegar separado
+        return alunoRepository.findByAtivoTrue()
+                .stream().map(AlunoDTO::toDTO)
+                .collect(Collectors.toList());
     }
-*/
+
+    public Optional<AlunoDTO> buscarAlunoPorId(Long id) {
+        return alunoRepository.findById(id)
+                .filter(Aluno::isAtivo)
+                .map(AlunoDTO::toDTO);
+    }
+
+    public boolean atualizarAluno(Long id, AlunoDTO dto) {
+        return alunoRepository.findById(id).map(aluno -> {
+            Aluno alunoAtualizado = dto.fromDTO();
+
+            aluno.setNome(alunoAtualizado.getNome());
+            aluno.setEmail(alunoAtualizado.getEmail());
+            aluno.setDataNascimento(alunoAtualizado.getDataNascimento());
+            aluno.setCpf(alunoAtualizado.getCpf());
+            aluno.setJustificativas(alunoAtualizado.getJustificativas());
+            aluno.setOcorrencias(alunoAtualizado.getOcorrencias());
+            aluno.setSubTurmas(alunoAtualizado.getSubTurmas());
+
+            alunoRepository.save(aluno);
+            return true;
+        }).orElse(false);
+    }
+
+    public boolean inativarAluno(Long id) {
+        return alunoRepository.findById(id).map(aluno -> {
+            aluno.setAtivo(false);
+
+            alunoRepository.save(aluno);
+            return true;
+        }).orElse(false);
+    }
+
 }
